# zephyr-course

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/src/: main.c
boards/task1_board/: Kconfig.task1_board  board.yml  task1_board.yaml
boards/task2_board/: CMakeLists.txt  Kconfig.task2_board  board.c  board.yml  task2_board.dts  task2_board.yaml
drivers/our_driver/: CmakeLists.txt  Kconfig  our_driver.c  our_driver.h  our_driver_shell.c
